The DN attribute order configuration cannot be changed with keyboard only.
Description
Description
Revisions and Commits
Revisions and Commits
| rLIBKLEO Libkleo | |||
| rLIBKLEO25f3821c7697 Announce current item when lists get focus | |||
| rLIBKLEOd7f0b09a5507 Set list as buddy of corresponding label | |||
| rLIBKLEO8207fe17deb7 Set accessible name for the attribute entries | |||
| rLIBKLEO4a1a18a7f7fe Ensure consistent selection of the current item | |||
| rLIBKLEO4dd349249cf8 Select the first item in both lists after filling the lists | |||
| rLIBKLEO809f8d1fb488 Separate buttons for changing the entries and for changing the order | |||
| rLIBKLEO381f044177e0 Add accessible names for the lists | |||
| rLIBKLEO5e1e0a7e8dd9 Remove useless checks for QT_NO_TREEWIDGET | |||
| rLIBKLEOd1672548be39 Make selection of the attributes with the keyboard work | |||
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA8bd15667adb3 Set default attribute order if no custom order is configured | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Open | None | T5824 Kleopatra: Full accessibility support | ||
| Resolved | • ikloecker | T6089 Kleopatra: Make DN attribute order configuration accessible |
Event Timeline
Comment Actions
I think the accessibility is okay now. It could be further improved with useful shortcuts for the different buttons, but the DN attribute order configuration is a rather unimportant UI of Kleopatra.
Comment Actions
Well it is good that we have it now and we should not remove it. But when asked I would probably have said that this dialog / page should be removed altogether. I would bet that if we did a user survey this dialog is not used at all. Or very very rarely.