Make selection of the attributes with the keyboard work

The itemClicked() signal is not fired if an item is selected with the
keyboard. Use the proper signal (itemSelectionChanged) for reacting to
a changed selection.

GnuPG-bug-id: 6089